# natural-language-processing

./: .editorconfig  .gitignore  LICENSE  README.md  postBuild  pyproject.toml  utils.py  utils2.py
week1/: NLP_C1_W1_lecture_nb_02.ipynb
week2/: conclusion.ipynb
week3/: NLP_C1_W3_lecture_nb_01.ipynb  NLP_C1_W3_lecture_nb_03.ipynb  conclusion.ipynb  test_data.py
week4/: NLP_C1_W4_lecture_nb_01.ipynb  NLP_C1_W4_lecture_nb_02.ipynb
week5/: NLP_C2_W1_lecture_nb_01.ipynb  NLP_C2_W1_lecture_nb_02.ipynb  conclusion.ipynb
week6/: NLP_C2_W2_lecture_notebook_numpy.ipynb  conclusion.ipynb
week7/: NLP_C2_W3_lecture_nb_02.ipynb  NLP_C2_W3_lecture_nb_03.ipynb  conclusion.ipynb
week8/: C2_W4_lecture_nb_2_intro_to_CBOW.ipynb  C2_W4_lecture_nb_3_training_the_CBOW.ipynb  C2_W4_lecture_nb_4_word_embeddings_hands_on.ipynb  C2_W4_lecture_nb_5_word_embeddings_step_by_step.ipynb
