[tool.poetry]
name = "natural-language-processing"
version = "0.1.0"
description = "Natural Language Processing"
authors = ["S.Hwang <14135938+TipsyPixie@users.noreply.github.com>"]
license = "Beerware"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
jupyterlab-code-formatter = "^1.4.10"
black = "^21.6b0"
isort = "^5.9.2"
nltk = "^3.6.2"
matplotlib = "^3.4.2"
numpy = "^1.21.0"
pandas = "^1.3.0"
plotly = "^5.1.0"
ipywidgets = "^7.6.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
